--- a/src/main.css
+++ b/src/main.css
@@ -1,6 +1,16 @@
 html{
     scroll-behavior: smooth;
 }
+.logo{
+    position: relative;
+    width: 150px;
+    height: auto;
+    left: 0;
+    margin-top: -20px;
+}
+.info{
+    margin-top: 30px;
+}
 #progress{
 
     position: fixed;
@@ -66,6 +76,7 @@ body{
 .header{
     /*padding-top: 46px;*/
     background-color: #F1F1F1;
+
 
 }
 
