--- a/src/media.css
+++ b/src/media.css
@@ -1,4 +1,9 @@
 @media(max-width: 1230px){
+    .logo{
+        width: 75px;
+        margin-top: -30px;
+        padding-bottom: 0;
+    }
     .nav-list{
         display: none;
     }
