--- a/src/media.css
+++ b/src/media.css
@@ -101,10 +101,12 @@
         margin-top: -120px;
     }
     .card-content{
-        transform: translateY(40%);
+       margin-left: -140px;
+        padding: 10rem;
+        transform: translateY(45%);
     }
     .card:hover .card-content{
-        transform: translateY(-80%);
+        transform: translateY(-55%);
     }
     .madeby{
         margin-left: 100px;
