--- a/src/main.css
+++ b/src/main.css
@@ -1,6 +1,9 @@
 html{
     scroll-behavior: smooth;
 }
+.infobutton{
+    background-color: #272e34;
+}
 .logo{
     position: relative;
     width: 120px;
