--- a/src/media.css
+++ b/src/media.css
@@ -63,6 +63,7 @@
     }
     .card-slideshow{
         margin-left: 550px;
+
     }
 
 }
@@ -75,8 +76,8 @@
         line-height: 1.3;
     }
     .card-slideshow{
-        /*margin-left: 550px;*/
-        position: relative;
+        margin-left: 550px;
+
     }
     .first, .second, .third{
         width: 400px;
@@ -104,5 +105,7 @@
     .card:hover .card-content{
         transform: translateY(-55%);
     }
+
+
 
 }
