--- a/src/media.css
+++ b/src/media.css
@@ -5,15 +5,18 @@
         margin-top: -30px;
         padding-bottom: 0;
     }
+    .sprachen{
+        display: none;
+    }
     .nav-list{
         display: none;
+
     }
     .nav-button{
        display: block;
     }
 
     .nav.open .nav-list{
-
         position: fixed;
         top:0;
         bottom: 0;
@@ -98,7 +101,7 @@
         margin-top: -120px;
     }
     .card-content{
-       margin-left: -140px;
+        margin-left: -140px;
         padding: 10rem;
         transform: translateY(45%);
     }
